[gd_scene load_steps=9 format=3 uid="uid://xdwl76nvcgew"]

[ext_resource type="Script" uid="uid://vi1shch2ti46" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://givc3ehxf8ol" path="res://floor.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://2p34a5pdrnq4" path="res://player/player.tscn" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://c0y1cx7bdg81u" path="res://boss/boss.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://5g586dy1b12s" path="res://scenes/candy/candy.tscn" id="5_lquwl"]
[ext_resource type="Resource" uid="uid://bhe00bfbkd2mn" path="res://scenes/candy/grow_candy.tres" id="6_7mycd"]
[ext_resource type="Resource" uid="uid://dkejvf8kijtf2" path="res://scenes/candy/shrink_candy.tres" id="7_272bh"]

[sub_resource type="Environment" id="Environment_h2yge"]
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 10.0
sdfgi_enabled = true

[node name="Main" type="Node"]
script = ExtResource("1_h2yge")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_h2yge")

[node name="Floor" parent="." instance=ExtResource("1_ig7tw")]

[node name="Player" parent="." instance=ExtResource("2_0xm2m")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.291674, 1.03228, -8.32486)

[node name="Boss" parent="." instance=ExtResource("4_1bvp3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.297344, 0.979406, -3.6269)

[node name="Candy" parent="." instance=ExtResource("5_lquwl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.13987, 0.124845, -0.40022)
candy_stat = ExtResource("6_7mycd")

[node name="Candy2" parent="." instance=ExtResource("5_lquwl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.54923, 0.128544, -3.05675)
candy_stat = ExtResource("7_272bh")

[connection signal="picked_up" from="Candy" to="." method="_on_candy_picked_up"]
[connection signal="picked_up" from="Candy2" to="." method="_on_candy_2_picked_up"]
